* Added Freeplay Icons
* Re-exported Macohi Icons
* Added Nicom Song
* Added Bit 2 (We're now in Macohi Album 2)
* Redrew bit1 storymenu title